force-app/main/default/objects/Case_Status_Mapping__mdt/Case_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Case Status Mapping</label>
    <pluralLabel>Case Status Mapping</pluralLabel>
</CustomObject>