force-app/main/default/objects/Case_Status_Mapping__mdt/fields/Mobile_App_Type__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Type__c</fullName>
    <label>Mobile App Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-flight</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>