force-app/main/default/objects/Case_Status_Mapping__mdt/fields/Mobile_App_Value__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Value__c</fullName>
    <description>Value in Mobile App</description>
    <label>Mobile App Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>