force-app/main/default/objects/Case_Status_Mapping__mdt/fields/SFDC_Value__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Value__c</fullName>
    <description>Value in SFDC</description>
    <label>SFDC Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>